# rust_parquet_merge

./: .gitignore  Cargo.toml  README.md
examples/: aisle_streaming_merge.rs  async_streaming_merge.rs  async_streaming_merge_payload.rs  async_streaming_merge_widening.rs  datafusion_stream_mutate.rs  metadata_inspection.rs  parquet_merge_benchmark.rs  payload_benchmark.rs  polars_streaming_merge.rs  rust_vs_duckdb_benchmark.rs  streaming_merge.rs
src/: compaction.rs  lib.rs
src/compaction/: tests.rs
