[package]
name = "rust_parquet_merge"
version = "0.1.0"
edition = "2024"

[dependencies]
arrow = "55.1.0"
arrow-array = "55.1.0"
arrow-schema = "55.1.0"
parquet = "55.1.0"
aisle = { git = "https://github.com/tonbo-io/aisle.git", branch = "main" }
tokio = { version = "1.45.1", features = ["full"] }
futures-util = "0.3.31"
datafusion = "49.0.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
chrono = { version = "0.4.41", features = ["serde"] }
# polars = { version = "0.48.1", features = ["lazy", "parquet"] }

[[example]]
name = "streaming_merge"
path = "examples/streaming_merge.rs"

# [[example]]
# name = "polars_streaming_merge"
# path = "examples/polars_streaming_merge.rs"

[[example]]
name = "metadata_inspection"
path = "examples/metadata_inspection.rs"

[[example]]
name = "aisle_streaming_merge"
path = "examples/aisle_streaming_merge.rs"

[[example]]
name = "async_streaming_merge"
path = "examples/async_streaming_merge.rs"
